--- a/cart.html
+++ b/cart.html
@@ -39,7 +39,7 @@
   <div class="main">
       <div class="page-title">Review your order</div>
 
-      <div class="checkout-grid">
+      <div class="checkout-grid items">
         <div class="order-summary">
           <div class="cart-item-container">
             <div class="delivery-date">
@@ -228,5 +228,7 @@
         </div>
       </div>
     </div>
+    <script src="src/cart.js"></script>
+    <script src="src/script.js"></script> 
 </body>
 </html>
