--- a/cart.html
+++ b/cart.html
@@ -223,7 +223,7 @@
           </div>
 
           <button class="place-order-button button-primary">
-            Place your order
+            <a href="orders.html">Place your order</a>
           </button>
         </div>
       </div>
