updating general JS

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!--SHOP SECTION-->
     <div class="shop" id="shop">
         <!--SHOP ITEMS SECTION-->
-        <div class="item">
+        <div class="items">
             <img title="T-shirt" src="images/t-shirt.avif" alt="T-Shirt" class="items-image">
             <h3 class="desc">T-Shirt</h3>
 
@@ -76,7 +76,7 @@
         
     </div>
     <script src="src/cart.js"></script>
-<script src="src/script.js"></script>   
+    <script src="src/script.js"></script>   
 </body>
 </html>
 
