--- a/cart.html
+++ b/cart.html
@@ -28,7 +28,7 @@
         </a>
         <div class="cart">
             <a href="cart.html"><i title="Cart" class="bi bi-cart4"></i></a>
-            <div class="cartAmount">0</div>
+            <div class="cartAmount js-cart-quantity">0</div>
         </div>
     </div>
   </div>
@@ -38,7 +38,7 @@
 
   <div class="main">
       <div class="page-title">Review your order</div>
-
+<!-- 
       <div class="checkout-grid items">
         <div class="order-summary">
           <div class="cart-item-container">
@@ -227,7 +227,7 @@
           </button>
         </div>
       </div>
-    </div>
+    </div> -->
     <script src="src/cart.js"></script>
     <script src="src/script.js"></script> 
 </body>
