--- a/orders.html
+++ b/orders.html
@@ -11,8 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Belanosima:wght@400;600&family=Open+Sans:wght@300;400;500&family=Roboto:ital,wght@0,300;0,400;0,500;1,500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- HEADER SECTION -->
-    <div class="navbar">
+     <!-- HEADER SECTION -->
+     <div class="navbar">
       <a href="index.html" class="navbar-title" title="Home">ShopWithAmos</a>
       <div class="header-middle-section">
           <input class="search-bar" type="text" placeholder="Search">
@@ -21,17 +21,17 @@
           </button>
       </div>
 
-      <div class="header-right-section">
-          <a class="orders-link header-link" href="orders.html">
-          <span class="returns-text">Returns</span>
-          <span class="orders-text">& Orders</span>
-          </a>
-          <div class="cart cart-items">
-              <a href="cart.html"><i title="Cart" class="bi bi-cart4"></i></a>
-              <div class="cartAmount js-cart-quantity">0</div>
-          </div>
+      <a class="orders-link header-link" href="orders.html">
+      <span class="returns-text">Returns</span>
+      <span class="orders-text">& Orders</span>
+      </a>
+      <div class="cart cart-items">
+          <a href="cart.html"><i title="Cart" class="bi bi-cart4"></i></a>
+          <div class="cartAmount js-cart-quantity">0</div>
       </div>
-    </div>
+      <a href="signup.html"><button class="sign-up">Sign Up</button></a>
+      
+  </div>
     <br>
     <div class="main">
       <div class="page-title">Your Orders</div>
