--- a/cart.html
+++ b/cart.html
@@ -12,7 +12,8 @@
 </head>
 <body>
   <!-- HEADER SECTION -->
-  <div class="navbar">
+   <!-- HEADER SECTION -->
+   <div class="navbar">
     <a href="index.html" class="navbar-title" title="Home">ShopWithAmos</a>
     <div class="header-middle-section">
         <input class="search-bar" type="text" placeholder="Search">
@@ -21,17 +22,17 @@
         </button>
     </div>
 
-    <div class="header-right-section">
-        <a class="orders-link header-link" href="orders.html">
-        <span class="returns-text">Returns</span>
-        <span class="orders-text">& Orders</span>
-        </a>
-        <div class="cart">
-            <a href="cart.html"><i title="Cart" class="bi bi-cart4"></i></a>
-            <div class="cartAmount js-cart-quantity">0</div>
-        </div>
+    <a class="orders-link header-link" href="orders.html">
+    <span class="returns-text">Returns</span>
+    <span class="orders-text">& Orders</span>
+    </a>
+    <div class="cart cart-items">
+        <a href="cart.html"><i title="Cart" class="bi bi-cart4"></i></a>
+        <div class="cartAmount js-cart-quantity">0</div>
     </div>
-  </div>
+    <a href="signup.html"><button class="sign-up">Sign Up</button></a>
+    
+</div>
   <br>
 
   <h2 style="text-align: center; color: black;">Cart</h2>
