--- a/signup.html
+++ b/signup.html
@@ -24,7 +24,7 @@
       <input type="text" name="email" placeholder="Email">
       <input type="password" name="password" placeholder="Password">
       <input type="password" name="confirm_password" placeholder="Confirm Password">
-      <a href="index.html" target="_blank"><input type="submit" value="Sign Up"></a>
+      <a href="index.html"><input type="submit" value="Sign Up"></a>
     </form>
   </body>
   </html>
