--- a/tracking.html
+++ b/tracking.html
@@ -32,6 +32,9 @@
         <a href="signup.html"><button class="sign-up">Sign Up</button></a>
         
     </div>
+    <div>
+        <a href="contact.html"><button class="msg-btn">Send a Message</button></a>
+    </div>
 
 </body>
 </html>
