--- a/cart.html
+++ b/cart.html
@@ -229,6 +229,9 @@
         </div>
       </div>
     </div> -->
+    <div>
+      <a href="contact.html"><button class="msg-btn">Send a Message</button></a>
+  </div>
     <script src="src/cart.js"></script>
     <script src="src/script.js"></script> 
 </body>
