--- a/orders.html
+++ b/orders.html
@@ -30,7 +30,6 @@
           <div class="cartAmount js-cart-quantity">0</div>
       </div>
       <a href="signup.html"><button class="sign-up">Sign Up</button></a>
-      
   </div>
     <br>
     <div class="main">
@@ -56,7 +55,7 @@
               <div>27cba69d-4c3d-4098-b42d-ac7fa62b7664</div>
             </div>
           </div>
-
+          <br>
           <div class="order-details-grid">
             <div class="product-image-container">
               <img src="images/nike air.avif" width="110px" height="110px">
@@ -85,9 +84,9 @@
                 </button>
               </a>
             </div>
-
+            <br>
             <div class="product-image-container">
-              <img src="images/colorful socks.webp">
+              <img src="images/colorful socks.webp" width="110px" height="110px">
             </div>
 
             <div class="product-details">
@@ -135,10 +134,10 @@
               <div>b6b6c212-d30e-4d4a-805d-90b52ce6b37d</div>
             </div>
           </div>
-
+          <br>
           <div class="order-details-grid">
             <div class="product-image-container">
-              <img src="images/brugge wristwatch.avif">
+              <img src="images/brugge wristwatch.avif" width="110px" height="110px">
             </div>
 
             <div class="product-details">
@@ -152,7 +151,7 @@
                 Quantity: 2
               </div>
               <button class="buy-again-button button-primary">
-                <img class="buy-again-icon" src="images/icons/buy-again.png">
+                <img class="buy-again-icon" src="images/buy-again.png">
                 <span class="buy-again-message">Buy it again</span>
               </button>
             </div>
@@ -168,6 +167,9 @@
         </div>
       </div>
     </div>
+    <div>
+      <a href="contact.html"><button class="msg-btn">Send a Message</button></a>
+  </div>
     <script src="src/orders.js"></script>
     <script src="src/cart.js"></script>
     <script src="src/script.js"></script>
