--- a/tracking.html
+++ b/tracking.html
@@ -32,8 +32,48 @@
         <a href="signup.html"><button class="sign-up">Sign Up</button></a>
         
     </div>
-    <div>
-        <a href="contact.html"><button class="msg-btn">Send a Message</button></a>
+
+    <div class="main">
+        <div class="order-tracking">
+          <a class="back-to-orders-link link-primary" href="orders.html">
+            View all orders
+          </a>
+  
+          <div class="delivery-date">
+            Arriving on Monday, June 13
+          </div>
+  
+          <div class="product-info">
+            Shirt
+          </div>
+  
+          <div class="product-info">
+            Quantity: 1
+          </div>
+  
+          <img class="product-image" src="images/shirt.avif">
+  
+          <div class="progress-labels-container">
+            <div class="progress-label">
+              Preparing
+            </div>
+            <div class="progress-label current-status">
+              Shipped
+            </div>
+            <div class="progress-label">
+              Delivered
+            </div>
+          </div>
+  
+          <div class="progress-bar-container">
+            <div class="progress-bar"></div>
+          </div>
+        </div>
+      </div>
+
+        <div>
+            <a href="contact.html"><button class="msg-btn">Send a Message</button></a>
+        </div>
     </div>
 
 </body>
