use modules and import cart from cart.js

--- a/index.html
+++ b/index.html
@@ -78,8 +78,7 @@
         
         
     </div>
-    <script src="src/cart.js"></script>
-    <script src="src/script.js"></script>   
+    <script type="module" src="src/script.js"></script>   
 </body>
 </html>
 
