generate html for the order summary

--- a/checkout.html
+++ b/checkout.html
@@ -39,9 +39,9 @@
 
   <div class="main">
       <div class="page-title">Review your order</div>
-<!-- 
+
       <div class="checkout-grid items">
-        <div class="order-summary">
+        <div class="order-summary js-order-summary">
           <div class="cart-item-container">
             <div class="delivery-date">
               Delivery date: Tuesday, June 21
@@ -228,11 +228,13 @@
           </button>
         </div>
       </div>
-    </div> -->
+    </div>
     <div>
-      <a href="contact.html"><button class="msg-btn">Send a Message</button></a>
-  </div>
-    <script src="src/cart.js"></script>
-    <script src="src/script.js"></script> 
+      <!-- <div class="message">
+        <a href="contact.html"><button class="msg-btn">Send a Message</button></a>
+      </div> -->
+      
+    </div>
+    <script type="module" src="src/checkout.js"></script> 
 </body>
 </html>
