--- a/tracking.html
+++ b/tracking.html
@@ -26,7 +26,7 @@
         <span class="orders-text">& Orders</span>
         </a>
         <div class="cart cart-items">
-            <a href="cart.html"><i title="Cart" class="bi bi-cart4"></i></a>
+            <a href="checkout.html"><i title="Cart" class="bi bi-cart4"></i></a>
             <div class="cartAmount js-cart-quantity">0</div>
         </div>
         <a href="signup.html"><button class="sign-up">Sign Up</button></a>
